# idlfe

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  _array_8h.html  _array_8h_source.html  _attribute_8h.html  _attribute_8h_source.html  _basic_type_8h.html  _basic_type_8h_source.html  _builder_8h_source.html  _code_gen_8h.html  _code_gen_8h_source.html  _constant_8h.html  _constant_8h_source.html  _container_8h.html  _container_8h_source.html  _declarators_8h.html  _declarators_8h_source.html  _enum_8h.html  _enum_8h_source.html  _exception_8h.html  _exception_8h_source.html  _fixed_8h.html  _fixed_8h_source.html  _forward_declarable_8h.html  _forward_declarable_8h_source.html  _i_d_l___front_end_8h.html  _i_d_l___front_end_8h_source.html  _i_d_l__print_8cpp-example.html  _i_v___base_8h.html  _i_v___base_8h_source.html  _identifier_8h.html  _identifier_8h_source.html  _include_8h.html  _include_8h_source.html  _indented_out_8h.html  _indented_out_8h_source.html  _interface_8h.html  (+248 more)
.github/workflows/: cmake-multi-platform.yml  static.yml
conan/: clang  gcc
docs/: _array_8h.html  _array_8h_source.html  _attribute_8h_source.html  _basic_type_8h_source.html  _code_gen_8h.html  _code_gen_8h_source.html  _constant_8h.html  _constant_8h_source.html  _container_8h.html  _declarators_8h.html  _declarators_8h_source.html  _exception_8h.html  _exception_8h_source.html  _fixed_8h_source.html  _forward_declarable_8h_source.html  _i_d_l___front_end_8h.html  _i_d_l___front_end_8h_source.html  _i_d_l__print_8cpp-example.html  _i_v___base_8h.html  _i_v___base_8h_source.html  _include_8h.html  _interface_8h.html  _item_8h.html  _item_scope_8h.html  _item_scope_8h_source.html  _item_with_id_8h_source.html  _location_8h.html  _location_8h_source.html  _message_out_8h_source.html  _module_8h.html  _module_8h_source.html  _named_item_8h_source.html  _native_8h.html  _native_8h_source.html  _operation_8h.html  _operation_8h_source.html  _operation_base_8h_source.html  _parameter_8h.html  _printer_8cpp-example.html  _scoped_name_8h.html  (+99 more)
docs/html/: _attribute_8h.html  _basic_type_8h.html  _builder_8h_source.html  _container_8h_source.html  _enum_8h.html  _enum_8h_source.html  _fixed_8h.html  _forward_declarable_8h.html  _identifier_8h.html  _identifier_8h_source.html  _include_8h_source.html  _indented_out_8h.html  _indented_out_8h_source.html  _interface_8h_source.html  _item_8h_source.html  _item_with_id_8h.html  _member_8h.html  _member_8h_source.html  _message_out_8h.html  _named_item_8h.html  _operation_base_8h.html  _parameter_8h_source.html  _root_8h.html  _root_8h_source.html  _scoped_name_8h_source.html  _sequence_8h_source.html  _state_member_8h.html  _state_member_8h_source.html  _struct_8h.html  _struct_base_8h_source.html  _symbols_8h_source.html  _type_8h.html  _type_def_8h.html  _type_def_8h_source.html  _union_element_8h.html  _union_element_8h_source.html  _value_factory_8h.html  _value_factory_8h_source.html  _value_type_8h.html  annotated.html  (+87 more)
docs/search/: all_0.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_e.js  classes_10.js  classes_4.js  classes_6.js  classes_7.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_1.js  enumvalues_3.js  enumvalues_6.js  (+35 more)
example/: CMakeLists.txt  IDL_Print.cpp  IDL_Print.h  Printer.cpp  Printer.h  main.cpp
profiles/: linux-gcc-x64.profile  windows-clang-x64.profile  windows-msvc-x64.profile  windows-msvc-x86.profile
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+75 more)
src/: CMakeLists.txt  CmdLineParser.cpp  CmdLineParser.h  IDL_FrontEnd.cpp  Options.h  compile.cpp  compile.h  main.cpp
src/AST/: AST.cpp  AST.h  Array.h  Attribute.h  BasicType.h  Builder.cpp  Builder.h  CMakeLists.txt  Constant.h  Container.cpp  Container.h  Declarators.h  Enum.h  Eval.cpp  Eval.h  EvalBool.cpp  EvalBool.h  EvalDouble.cpp  EvalDouble.h  EvalEnum.cpp  EvalEnum.h  EvalFixed.cpp  EvalFixed.h  EvalLong.cpp  EvalLong.h  EvalLongLong.cpp  EvalLongLong.h  EvalString.cpp  EvalString.h  EvallLong.cpp  Exception.h  Fixed.cpp  Fixed.h  Identifier.cpp  Include.h  Interface.cpp  Interface.h  Item.cpp  Item.h  ItemContainer.h  (+33 more)
src/AST/Builder/: Builder.cpp  Builder.h  CMakeLists.txt  Declarators.h  Eval.cpp  Eval.h  EvalBool.cpp  EvalBool.h  EvalDouble.cpp  EvalDouble.h  EvalEnum.cpp  EvalEnum.h  EvalFixed.cpp  EvalFixed.h  EvalFloatingPoint.cpp  EvalFloatingPoint.h  EvalIntegral.cpp  EvalIntegral.h  EvalLong.cpp  EvalLong.h  EvalLongLong.cpp  EvalLongLong.h  EvalString.cpp  EvalString.h  decNumber.h
src/BE/: CMakeLists.txt  IndentedOut.cpp  MessageOut.cpp
src/FE/: Driver.cpp  Driver.h  FlexLexer.h  ParserControl.cpp  ParserControl.h  compile.cpp  compile.h  lexer.h  scanner.ll  yacc.output  yacc.tab.cc  yacc.yy
src/include/: IDL_FrontEnd.h
src/include/AST/: AST.h  Array.h  Attribute.h  BasicType.h  Builder.h  CodeGen.h  Constant.h  Container.h  Declarators.h  Enum.h  Exception.h  Fixed.h  ForwardDeclarable.h  IV_Base.h  Identifier.h  Include.h  Interface.h  Item.h  ItemContainer.h  ItemScope.h  ItemWithId.h  Location.h  Member.h  Module.h  NamedItem.h  Native.h  Operation.h  OperationBase.h  Parameter.h  RepositoryId.h  Root.h  ScopedName.h  Sequence.h  StateMember.h  Struct.h  StructBase.h  Symbols.h  Type.h  TypeDef.h  Union.h  (+5 more)
src/include/BE/: IndentedOut.h  MessageOut.h
test/: Memory.idl  Options.h  Test_I1.idl  Test_U.idl  Test_V1.idl  Test_V2.idl  Union.idl  calc.idl  compile.cpp  compile.h  empty.idl  empty_inc.idl  pseudo_test.idl
(+67 files in other folders)
